--- a/smacofNM.html
+++ b/smacofNM.html
@@ -249,6 +249,29 @@ width: 90%;
 </style>
 
 
+<style type="text/css">
+
+div.csl-bib-body { }
+div.csl-entry {
+clear: both;
+margin-bottom: 0em;
+}
+.hanging div.csl-entry {
+margin-left:2em;
+text-indent:-2em;
+}
+div.csl-left-margin {
+min-width:2em;
+float:left;
+}
+div.csl-right-inline {
+margin-left:2em;
+padding-left:1em;
+}
+div.csl-indent {
+margin-left: 2em;
+}
+</style>
 
 <style type="text/css">.greybox {
 padding: 1em;
@@ -373,6 +396,7 @@ TBD
 <li><a href="#paired-comparisons" id="toc-paired-comparisons"><span class="toc-section-number">2</span> Paired Comparisons</a></li>
 <li><a href="#triads" id="toc-triads"><span class="toc-section-number">3</span> Triads</a></li>
 <li><a href="#rank-orders" id="toc-rank-orders"><span class="toc-section-number">4</span> Rank Orders</a></li>
+<li><a href="#references" id="toc-references">References</a></li>
 </ul>
 </div>
 
@@ -410,6 +434,11 @@ and
 <div id="paired-comparisons" class="section level1" number="2">
 <h1><span class="header-section-number">2</span> Paired Comparisons</h1>
 <p>Positive Orthant / Absolute Value / Pairwise</p>
+<p><span class="citation">De Leeuw (1970)</span>
+<span class="citation">De Leeuw (2018)</span>
+<span class="citation">(<strong>hartman_79?</strong>)</span>
+<span class="citation">Guttman (1969)</span>
+<span class="citation">Johnson (1973)</span></p>
 <p><span class="math display">\[
 \min_{\hat D}r_{ijkl}(X,\hat D)=\begin{cases}0&amp;\text{ if  correct},\\\frac12w_{ijkl}(d_{ij}(X)-d_{kl}(X))^2&amp;\text{ if wrong}.\end{cases}
 \]</span></p>
@@ -440,6 +469,23 @@ w_{ijkl}\{(\hat d_{ij}-d_{ij}(X))^2+(\hat d_{kl}-d_{kl}(X))^2\}
 </div>
 <div id="rank-orders" class="section level1" number="4">
 <h1><span class="header-section-number">4</span> Rank Orders</h1>
+</div>
+<div id="references" class="section level1 unnumbered">
+<h1>References</h1>
+<div id="refs" class="references csl-bib-body hanging-indent" entry-spacing="0">
+<div id="ref-deleeuw_R_70a" class="csl-entry">
+De Leeuw, J. 1970. <span>“The Positive Orthant Method for Nonmetric Multidimensional Scaling.”</span> Research Report 001-70. Leiden, The Netherlands: Department of Data Theory FSW/RUL.
+</div>
+<div id="ref-deleeuw_E_18d" class="csl-entry">
+———. 2018. <span>“<span>The Positive Orthant Method </span>.”</span> 2018.
+</div>
+<div id="ref-guttman_69" class="csl-entry">
+Guttman, L. 1969. <span>“<span class="nocase">Smallest Space Analysis by the Absolute Value Principle</span>.”</span> In <em><span class="nocase">Proceedings of the XIX International Congress of Psychology, London</span></em>.
+</div>
+<div id="ref-johnson_73" class="csl-entry">
+Johnson, R. M. 1973. <span>“<span>Pairwise Nonmetrc Multidimensional Scaling</span>.”</span> <em>Psychometrika</em> 38 (12–18).
+</div>
+</div>
 </div>
 
 
