--- a/smacofNM/smacofNM.html
+++ b/smacofNM/smacofNM.html
@@ -382,7 +382,7 @@ display: none;
 <h1 class="title toc-ignore"><div class="line-block">Smacof at 50: A Manual<br />
 Part 2: Non-metric Smacof</div></h1>
 <h4 class="author">Jan de Leeuw - University of California Los Angeles</h4>
-<h4 class="date">Started March 30 2024, Version of April 02, 2024</h4>
+<h4 class="date">Started March 30 2024, Version of April 03, 2024</h4>
 <div class="abstract">
 <p class="abstract">Abstract</p>
 TBD
@@ -426,7 +426,7 @@ which must be minimized over <span class="math inline">\(X\)</span> and over <sp
 <span class="math display">\[
 \sigma_R(X,\delta_1,\cdots,\delta_s)=\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}\delta_{ijr}^2-2\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}\delta_{ijr}d_{ij}(X)+\sum_{r=1}^s\omega_r\sum_{i,j} w_{ijr}d_{ij}^2(X))
 \]</span>
-Nor use
+Nor use the basic smacof inequality
 <span class="math display">\[
 d_{ij}(X)\geq\frac{1}{d_{ij}(Y)}\text{tr}\ X&#39;A_{ij}Y
 \]</span>
@@ -516,7 +516,7 @@ that <span class="math inline">\((i,j)\)</span> and <span class="math inline">\(
 <h1><span class="header-section-number">7</span> Richardson –</h1>
 <p>each triple presented three times, with a different hub each time
 which one of the two is maximally similar to the hub stimulus. Thus the data
-is the single inequality <span class="math inline">\((i,k) &lt; (j,k)\)</span></p>
+is the single inequality <span class="math inline">\((i,k) &lt; (j,k)\)</span>. Coombs calls this the …</p>
 </div>
 <div id="conditional-rank-orders-klingberg" class="section level1" number="8">
 <h1><span class="header-section-number">8</span> Conditional rank Orders – Klingberg</h1>
